added replicaset notes

--- a/CKA/1.core_concepts.md
+++ b/CKA/1.core_concepts.md
@@ -230,3 +230,80 @@ spec:
 ```bash
 kubectl run nginx --image=nginx --dry-run=client -o yaml > out.yaml
 ```
+
+## Replication Controller
+- Replicas provide HA for pods
+- Replication Controller
+  - ensures even 1 pod is running at all times
+  - Spans across multiple nodes
+- Replication Controller != Replica Set
+- Replicat Set
+  - Replaces replication controller
+- reuse the contents of a normal pod definition into the `template` section of the replication controller excluding the `apiVersion and kind` section
+```yaml
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  name: myapp-rc
+  labels:
+    app: myapp
+spec:
+  template:
+    metadata:
+      name: myapp
+      labels:
+        app: myapp
+        tier: frontend
+    spec:
+      containers:
+        - name: myapp
+          image: nginx
+  replicas: 3
+```
+- replicaset
+  - can also manage pods that were not created by replicaset creation
+  - `selector` is mandatory in replicaset
+```yaml
+apiVersion: apps/v1
+kind: ReplicaSet
+metadata:
+  name: myapp-rs
+  labels:
+    app: myapp
+spec:
+  template:
+    metadata:
+      name: myapp
+      labels:
+        app: myapp
+        tier: frontend
+    spec:
+      containers:
+        - name: myapp
+          image: nginx
+  replicas: 3
+  # decides what pods fall under it 
+  selector:
+    matchLabels:
+      tier: frontend
+```
+### Labels and selectors
+- ReplicaSets
+  - can monitor existing pods 
+  - is a process that monitors all pods
+  - Labels on pods are used to identify pods
+  - `matchLabels` is used to identify pods that fall under the replicaset
+- ways to scale the pods in replicaset
+```bash
+# get replicaset
+k get rs
+# replace the replicaset
+k replace -f replicaset.yaml
+# scale the replicaset
+k scale rs myapp-rs --replicas=5
+k scale -f replicaset.yaml --replicas=5
+# check explanation
+k explain rs
+# edit existing replicaset
+k edit rs myapp-rs
+```
