--- a/CKA/1.core_concepts.md
+++ b/CKA/1.core_concepts.md
@@ -307,3 +307,73 @@ k explain rs
 # edit existing replicaset
 k edit rs myapp-rs
 ```
+## Deployments
+- a k8s that is higher abstraction that replica sets
+- to create a deployment
+```yaml
+apiVersion: apps/v1
+kinda: Deployment
+metadata:
+  name: myapp-deploy
+  labels:
+    app: myapp
+spec:
+  template:
+    metadata:
+      name: myapp
+      labels:
+        app: myapp
+        tier: frontend
+    spec:
+      containers:
+        - name: myapp
+          image: nginx
+  replicas: 3
+  selector:
+    matchLabels:
+      tier: frontend
+```
+- commands are
+```bash
+k create -f deployment.yaml
+# get deployments
+k get deploy
+```
+## TIP
+```bash
+# generate yaml from commands
+k run nginx --image nginx --dry-run=client -o yaml > out.yaml
+k create deploy --image nginx --dry-run=client -o yaml > nginx-deploy.aml
+k create deploy --image redis --replicas=2 redis-deployment --dry-run=client -o yaml > redis-deploy.yaml
+```
+## services
+- all communication between pods or between pods and outside world is done via services
+- enable loose coupling between microservices
+1. external communication
+- curl the service IP from inside the k8s node
+- Service is an object that provides a stable IP address and DNS name for a set of pods
+- port naming is from Service viewpoint
+- NodePorts can only be in the range of `30000-32767`
+1. `NodePort` 
+- [NodePort] -> [Port] -> [TargetPort]
+- if `targetPort` is not provided, assumed to be same as Port
+- if `nodePort` is not provided, a random port is assigned within the range
+- if multiple pods with matching selectors are found, a random pod is selected
+- default load balancing is `random` with `sessionAffinity` set to `True`
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp-service
+spec:
+  type: NodePort
+  ports:
+    - targetPort: 80
+      port: 80 # port on service object. MANDATORY
+      nodePort: 30008 # must be in range 30000-32767
+  selector:
+    app: myapp
+    tier: frontend
+```
+2. `ClusterIP`
+3.  `LoadBalancer`
