finished core_concepts

--- a/CKA/1.core_concepts.md
+++ b/CKA/1.core_concepts.md
@@ -376,4 +376,73 @@ spec:
     tier: frontend
 ```
 2. `ClusterIP`
+- pod IPs are not static
+- ClusterIP provides a single interface for backend pods 
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: backend
+spec:
+  type: ClusterIP
+  ports:
+    - targetPort: 80
+      port: 80
+  selector:
+    app: myapp
+    tier: backend
+```
 3.  `LoadBalancer`
+- NodePort allows access via Node IP and the high ports
+- LoadBalancer allows a single URL to access the service
+- K8s has native integration with cloud providers to create a load balancer via `LoadBalancer` service type
+
+```yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: myapp-service
+spec:
+  type: LoadBalancer
+  ports:
+    - targetPort: 80
+      port: 80 # port on service object. MANDATORY
+      nodePort: 30008 # must be in range 30000-32767
+```
+## Namespaces
+- default namespaces are 
+1. default
+- internal purposes
+2. kube-system
+3. kube-public
+- resources that should be made available to all users
+4. kube-node-lease
+- switching namespaces
+```bash
+k config set-context$(kubectl config current-context) --namespace=dev
+```
+- setting resource quota for namespace
+```yaml
+apiVersion: v1
+kind: ResourceQuota
+metadata:
+  name: compute-resources
+spec:
+  hard:
+    pods: "4"
+    requests.cpu: "1"
+    requests.memory: 1Gi
+    limits.cpu: "2"
+    limits.memory: 2Gi
+```
+## imperative vs declarative
+1. imperative
+- set of instructions to create a pod step by step
+- e.g. `k run --image=nginx nginx`
+- very taxing on the user
+2. declarative 
+- need an nginx with port 8080 in yaml
+- used in k8s manifests
+## kubectl apply
+- the `last-applied-configuration` annotation is used to track the changes made to the resource
+- this is stored on the `live object configuration`
