--- a/CKA/4.application_lifecycle_management.md
+++ b/CKA/4.application_lifecycle_management.md
@@ -226,3 +226,36 @@ spec:
   - name: log-agent
     image: log-agent
 ```
+## Multi- container Pod design patterns
+1. Sidecar
+2. Adapter
+3. Ambassador
+## InitContainers
+- similar to normal pod definition but with a `initContainers` section
+- initContainers must run till completion before real container starts
+- multiple containers can be configured in initContainers
+  - this will be `one at a time sequential order`
+  - all containers in the initContainers must not fail else the pod will fail
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: myapp
+  labels:
+    app: myapp
+spec:
+  containers:
+  - name: myapp
+    image: busybox:1.28
+    command: 
+      - sh
+      - -c
+      - "echo Hello Kubernetes! && sleep 3600"
+  initContainers:
+  - name: init-service
+    image: busybox
+    command: ['sh','-c','git clone <some-repo>']
+```
+## Self healing applications
+- done via liveness and readines probes
+- these are topics for CKAD exam
