updated cluster upgrade

--- a/CKA/5.cluster_maintenance.md
+++ b/CKA/5.cluster_maintenance.md
@@ -48,3 +48,72 @@
 k drain <node> --ignore-daemonsets
 k uncordon <node>
 ```
+## Demo cluster upgrade
+```bash
+# Master node 
+## drain 
+k drain controlplane --ignore-daemonsets 
+## upgrade kubeadm tool
+apt update
+apt-mark unhold kubeadm && \
+apt-get update && apt-get install -y kubeadm=1.26.3-00 && \
+apt-mark hold kubeadm
+kubeadm upgrade apply v1.26.3
+## update kubeadm
+apt-mark unhold kubeadm && \
+apt-get update && apt-get install -y kubeadm=1.26.3-00 && \
+apt-mark hold kubeadm
+# upgrade kubelet
+apt-mark unhold kubelet kubectl && \
+apt-get update && apt-get install -y kubelet=1.26.0-00 kubectl=1.26.0-00 && \
+apt-mark hold kubelet kubectl
+# restart kubelet
+sudo systemctl daemon-reload
+sudo systemctl restart kubelet
+## for worker nodes
+## ssh to the node 
+ssh node01
+# repeate same process
+```
+
+## Backup and restore methods
+1. resource configuration
+- store in git
+- query the `kube-apiserver` via 
+```bash
+k get all --all-namespace -o yaml > all-deploy-services.yaml
+```
+2. etcd data
+- backup etcd server itself
+```bash
+## backup
+ETCDCTL_API=3 etcdctl snapshot save snapshot.db 
+## check status
+ETCDCTL_API=3 etcdctl snapshot status snapshot.db 
+```
+- restore etcd 
+```bash
+## stop etcd
+service kube-apiserver stop
+## restore - this creates a new etcd cluster with new data dir 
+ETCDCTL_API=3 etcdctl snapshot restore snapshot.db \
+--data-dir /var/lib/etcd-from-backup
+## update the etcd.service to point to new data dir 
+--data-dir=/var/lib/etcd-from-backup
+## reload and restart
+systemctl daemon-reload
+service etcd restart 
+## restart apiserver
+service kube-apiserver start
+```
+- remember to specify the certs when calling the etcdtl commands
+```bash
+ETCDCTL_API=3 etcdctl \
+    snapshot save snapshot.db \
+    --endpoints=https://127.0.0.1:2379 \
+    --cacert=/etc/etcd/ca.crt \
+    --cert=/etc/etcd/etcd-server.crt \
+    --key=/etc/etcd/etcd-server.key
+```
+
+3. persistent volumes
