--- a/CKA/5.cluster_maintenance.md
+++ b/CKA/5.cluster_maintenance.md
@@ -117,3 +117,7 @@ ETCDCTL_API=3 etcdctl \
 ```
 
 3. persistent volumes
+## etcd lab
+- check etcd.yaml config is `/etc/kubernetes/manifests/etcd.yaml`
+- if `etcdctl snapshot` command doesn't work, export the version via `ETCDCTL_API=3`
+- 
