added TLS section

--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -52,4 +52,107 @@ curl -kv https://master-node:6443/api/v1/pods \
 ## TLS introduction
 - Transport Layer Security
 - certs are used to guaranteed trust between 2 parties
-- 
+
+## TLS in k8s
+*.pem - server cert
+*.key - private key
+- all communication must be done via TLS
+### server certs
+1. kube-api 
+- apiserver.crt
+- apiserver.key
+- the only client that talks to etcd server 
+1b. kube-api to kubelet
+- apiserver-kubelet-client.crt
+- apiserver.kubelet-client.key
+2. etcd
+- etcdserver.crt
+- etcdserver.key
+3. kubelet
+- kubelet.crt
+- kubelet.key
+### clients
+1. admin
+- admin.crt
+- admin.key
+2. kube-scheduler
+- scheduler.crt
+- scheduler.key
+3. kube-controller-manager
+- controller-manager.crt
+- controller-manager.key
+4. kube-proxy
+- kube-proxy.crt
+- kube-proxy.key
+### Certificate authority 
+- must have at least 1 CA for the cluster
+- can have 1 CA for etcd and 1 for others
+- ca.cert
+- ca.key
+### Certificate creation
+```bash
+# 1. create private key
+openssl genrsa -out ca.key 2048
+# 2. create certificate signing request
+openssl req -new -key ca.key -subj "/CN=KUBERNETES-CA" -out ca.csr
+# 3. create self signed certificate 
+openssl x509 -req -in ca.csr -signkey ca.key -out ca.crt
+```
+### Client certificate
+```bash
+# 1. create private key
+openssl genrsa -out admin.key 2048
+# 2. create certificate signing request
+openssl req -new -key admin.key -subj "/CN=kube-admin" -out admin.csr
+# 2.b can include permissions in the certificate as well 
+openssl req -new -key admin.key \
+-subj "/CN=kube-admin/O=system:masters" -out admin.csr
+# 3. openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
+openssl x509 -req -in admin.csr -CA ca.crt -CAkey ca.key -out admin.crt
+```
+### other core components
+- `SYSTEM:KUBE-SCHEDULER`
+- `SYSTEM:KUBE-CONTROLLER-MANAGER`
+- `SYSTEM:KUBE-PROXY`
+### Using via curl
+```bash
+curl https://kube-apiserver:6443/api/v1/pods \
+--key admin.key --cert admin.crt --cacert ca.crt
+```
+### using via kube-config.yaml
+```yaml
+apiVersion: v1
+clusters:
+- cluster:
+    certificate-authority: ca.crt
+    server: https://kube-apiserver.:6443
+  name: kubernetes
+kind: Config
+...
+```
+### etcd server
+- generate additional peer certs for distributed setup
+### kube-api server
+- all components talk to kube-api server
+- some call it 
+    - kubernetes 
+    - kubernetes.default
+    - kubernetes.default.svc
+    - kubernetes.default.svc.cluster.local
+    - <IP_ADDRESS>
+- specify Subject alternate names
+```cnf
+...
+[alt names]
+DNS.1 = kubernetes
+DNS.2 = kubernetes.default
+DNS.3 = kubernetes.default.svc
+DNS.4 = kubernetes.default.svc.cluster.local
+IP.1 = <IP_ADDRESS>
+...
+```
+### kubelet 
+- https API server that runs on each node (captain)
+- talks to kube-api server
+- these certs are named after their nodes e.g node01, node02 etc
+- `system:node:node01` is used as the CN 
