--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -156,3 +156,74 @@ IP.1 = <IP_ADDRESS>
 - talks to kube-api server
 - these certs are named after their nodes e.g node01, node02 etc
 - `system:node:node01` is used as the CN 
+
+### View certificates 
+1. The hard way 
+- generate certs manually via openssl
+2. kubeadm
+- takes care of everything
+### checking logs for certs
+```bash
+journalctl -fu etcd.service 
+
+kubectl logs etcd-master
+
+# 1 level down 
+docker ps -a | grep etcd
+```
+### Cert Signing process
+1. create `CertificateSigningRequest` object
+- must be in base64
+```yaml
+apiVersion: certificates.k8s.io/v1beta1
+kind: CertificateSigningRequest
+metadata:
+    name: foo
+spec:
+    groups:
+    - system:authenticated
+    usages:
+    - digital signature
+    - key encipherment
+    - server auth
+    request: 
+        <base64 encoded CSR>
+```
+2. review requests
+```bash
+k get csr
+```
+3. approve request
+```yaml
+k certificate approve jane
+```
+### Cert related operations
+- carried out by the `Controller manager`
+- controllers
+1. csr-approving 
+2. csr-signing
+
+### Lab
+```yaml
+apiVersion: certificates.k8s.io/v1beta1
+kind: CertificateSigningRequest
+metadata:
+    name: akshay
+spec:
+    groups:
+    - system:authenticated
+    signerName: kubernetes.io/kube-apiserver-client
+    usages:
+    - client auth
+    request: <base64>
+```
+```bash
+# 1. convert csr to base64
+cat akshay.csr |base64 -w 0
+# 2. create csr object
+kubectl apply -f csr.yaml
+# 3. approve csr
+k certificate approve akshay
+# 4. delete csr
+k delete csr/akshay
+```
