added kubeconfig section

--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -227,3 +227,74 @@ k certificate approve akshay
 # 4. delete csr
 k delete csr/akshay
 ```
+
+## Kube config
+- manually calling the endpoing is not practical
+```bash
+curl https://my-endpoint:6443/api/v1/pods \
+--key admin.key \
+--cert admin.crt \
+--cacert ca.crt
+# via k command
+k get pods \
+--server my-cluster:6443 \
+--client-key admin.key \
+--client-certificate admin.crt \
+--certificate-authority ca.crt
+```
+- hence these are kept in `$HOME/.kube/config` file location
+- specific format is used 
+1. clusters
+- dev, prod, etc
+2. users 
+- admin, dev, prod
+3. contexts
+- marries clusters and users
+- e.g. grants admin user to production cluster
+### kube config file
+```yaml
+apiVersion: v1
+kind: Config
+clusters:
+- name: my-kube-playground
+  cluster:
+    certificate-authority: ca.crt
+    server: https://my-kube-playground:6443
+contexts:
+- name: my-kube-admin@my-kube-playground
+  context:
+    user: my-kube-admin
+    cluster: my-kube-playground
+users:
+- name: my-kube-admin
+  user:
+    client-certificate: admin.crt
+    client-key: admin.key
+```
+- alternatively, can use the base64 data 
+```yaml
+apiVersion: v1
+kind: Config
+...
+users:
+- name: my-kube-admin
+  user:
+    client-certificate-data: <base64>
+    client-key-data: <base64>
+```
+- commands for kube config
+```bash
+k config view
+# tagerted view 
+k config view --kubeconfig=my-config
+# get contexts
+k config get-contexts
+# get current context
+k config current-context
+# set contexts 
+k config use-context <context>
+# get clusters
+k config get-clusters
+# set namespaces
+k config set-context -current -namespace=dev
+```
