--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -298,3 +298,96 @@ k config get-clusters
 # set namespaces
 k config set-context -current -namespace=dev
 ```
+## API Groups
+```bash
+# get api version
+curl https://kube-master:6443/version
+```
+1. core group
+- `/api`
+-- v1
+--- namespaces, pods, bindings, secrets etc
+2. named groups
+- `/apis`
+- apps, networking, auth, storage, certificates etc
+- new features will fall under named groups
+### start a proxy 
+```bash
+# uses certs from kubeconfig
+kubectl proxy
+# then access the api via proxy
+curl http://localhost:8001 -k 
+```
+### kube proxy != kubectl proxy
+- kubectl proxy is a http service to access the kube-api server
+## Authorization
+- what can they do
+### types of auth
+1. node authorizer
+- authorizes kubelet nodes
+2. Attribute based access control (ABAC)
+- based on attributes of the request
+- difficult to manage
+3. Role based access control (RBAC)
+- based on roles
+- easier to manage
+- e.g. create a developer role and associate users to the role
+4. webhook
+- using 3rd party tools like Open Policy Agent
+5. AlwaysAllow
+6. AlwaysDeny
+### Authorization modes
+- set via `--authorization-mode` flag on kube-api server
+- set to `AlwaysAllow` by default
+- can set multiple modes 
+```bash
+# follows in sequence of defined modes
+--authorization-modes=Node,RBAC,Webhook
+```
+### RBAC
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: developer
+rules:
+- apiGroups: [""] # leave blank for core groups 
+  resources: ["pods"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["ConfigMap"]
+  verbs: ["create", "update", "patch"]
+  resourceNames: ["dev","stg"] # restrict to resource name itself
+```
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: developer-binding
+subjects:
+- kind: User
+  name: developer1
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: developer
+  apiGroup: rbac.authorization.k8s.io
+```
+```bash
+# create the role based on the above yaml
+k create -f developer-role.yaml
+# link the role to a user
+k create -f devuser-role-binding.yaml 
+# view roles
+k get roles
+# get rolebindings
+k get rolebindings
+# describe role
+k describe role developer
+# decribe role bindings
+k describe rolebindings devuser-role-binding
+# check my user
+k auth can-i create deployments
+# impersonate other users
+k auth can-i create pods --as dev-user --namespace test
+```
