--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -391,3 +391,37 @@ k auth can-i create deployments
 # impersonate other users
 k auth can-i create pods --as dev-user --namespace test
 ```
+
+## Cluster Roles and Cluster Rolebindings
+- are namespaced
+
+## Namespaces vs Cluster scoped
+- resources can either be
+  - namespaced
+  - cluster scoped
+## Cluster roles
+- for cluster role resources
+  - nodes
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: cluster-administrator
+rules:
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["get", "list"]
+```
+```yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cluster-admin-role-binding
+subjects:
+- kind: User
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: cluster-administrator
+```
