--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -425,3 +425,73 @@ roleRef:
   kind: ClusterRole
   name: cluster-administrator
 ```
+## accounts
+- user accounts
+- service accounts
+### service accounts
+```bash
+# create sa
+k create sa my-service-account
+# get sa 
+k get sa my-service-account -o yaml
+# describe sa
+k describe sa my-service-account
+``` 
+- tokens are generated for service accounts and stored in a secret object
+- secret object is then mounted to the service account
+- this token can be used as bearer token to authenticate to the kube-api server
+### grant k8s apps to service account
+- whenever a pod is created, the default service account and token is mounted as volume mount
+- default sa only can call kube-api server
+- cannot edit SA of a running pod
+```yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: my-pod
+spec:
+  containers:
+    - name: my-pod
+      image: my-pod
+  automountServiceAccounToken: false # disable mount of sa
+```
+- since v1.22, token request API is used instead
+  - defined lifetime
+  - audience
+- since v1.24
+  - need to run
+```bash
+k create sa my-service-account
+k create token my-service-account
+```
+- defaults with 1 hour expiry
+```bash
+# update sa for a deployment
+k set sa deploy/web-dashboard dashboard-sa
+```
+
+## images
+- docker.io/library/nginx
+- <registry>/<user/account>/<image_repository>
+### authentication to private registries
+- via secret object with registry credentials
+```bash
+k create secret docker-registry regcred \
+--docker-server=<registry> \
+--docker-username=<user> \
+--docker-password=<password> \
+--docker-email=<email>
+```
+- use the secret in a pod spec
+```yaml
+apiVersion: v1
+kind: Pod
+metadata: 
+  name: my-pod
+spec:
+  containers:
+    - name: my-pod
+      image: private-registry.io/apps/internal-app:latest
+    imagePullSecrets:
+    - name: regcred
+```
