--- a/CKA/6.security.md
+++ b/CKA/6.security.md
@@ -495,3 +495,169 @@ spec:
     imagePullSecrets:
     - name: regcred
 ```
+## Docker security
+- containers and hosts share the same kernel
+- containers are isolated using namespaces
+- docker host has a set of users
+- runs root by default in container
+### root user in container
+- root user in container is not the same as root user in host
+- capabilities can be added or removed via `--cap-add` or `--cap-drop` flags
+```bash
+docker run --cap-add= MAC_ADMIN ubuntu
+docker run --cap-drop= MAC_ADMIN ubuntu
+# run container with all privileges enabled
+docker run --privileged ubuntu
+```
+## Security contexts
+- can be configured on either the pod or container level
+```yaml
+# container level security context
+apiVersion: v1
+kind: Pod
+metadata:
+  name: my-pod
+spec:
+  containers:
+    - name: ubuntu
+      image: ubuntu
+      command: ["sleep", "3600"]
+      securityContext:
+        runAsUser: 1000
+        capabilities: # this is only supported at container level
+          add: ["MAC_ADMIN"]  
+```
+```yaml
+# pod level security context
+apiVersion: v1
+kind: Pod
+metadata:
+  name: my-pod
+spec:
+  securityContext:
+    runAsUser: 1000
+  ...
+```
+## Networking
+- `All Allow` rule is configured by default
+- all pods can reach each other via service name and IPs
+## Network policy
+- link policy to 1 or more pods
+- can be applied to ingress or egress traffic
+- via labels and selectors
+```yaml
+# from policy
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: api-policy
+spec:
+  podSelector:
+    matchLabels:
+      role: db
+  policyTypes:
+  - Ingress
+  ingress:
+  - from:
+    - podSelector:
+        matchLabels:
+          role: api-pod
+    ports:
+    - protocol: TCP
+      port: 3306
+```
+```yaml
+# from pod
+labels:
+  role: api-pod
+```
+- Solutions that support network policies
+  - kube-route
+  - calico
+  - romana
+  - weave-net
+- Solutions that DO NOT support network policies
+  - flannel
+  - kube-router
+  - kops
+  - kubeadm
+  - kubespray
+  - kubenet
+  - kuryr
+  - rke
+  - weave-net
+### Sample network policy
+- [API-POD]-->TCP3306-->[DB-POD]
+- just need to be concerned where the request originates AKA stateful
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: db-policy
+spec:
+  podSelector:
+    matchLabels:
+      role: db
+  policyTypes:
+  - Ingress
+  ingress:
+  - from:
+    # AND operation for 2 rules
+    - podSelector:
+        matchLables:
+          name: api-pod
+      namespaceSelector:
+        matchLabels:
+          name: prod
+    # OR operation for ipBlock
+    - ipBlock:
+        cidr: 192.168.5.10/32
+    ports:
+    - protocol: TCP
+      port: 3306
+```
+```yaml
+...
+spec:
+  podSelector:
+    matchLabels:
+      role: db
+  policyTypes:
+  - Egress
+  egress:
+  - to:
+    - ipBlock:
+        cidr: 192.168.5.10/32
+    ports:
+    - protocol: TCP
+      port: 80
+```
+- multiple policies in OR fashion
+```yaml
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: internal-policy
+  namespace: default
+spec:
+  egress:
+  - ports:
+    - port: 8080
+      protocol: TCP
+    to:
+    - podSelector:
+        matchLabels:
+          name: payroll
+  - ports:
+    - podSelector:
+        matchLabels:
+          name: mysql
+    - port: 3306
+      protocol: TCP
+  podSelector:
+    matchLabels:
+      name: internal
+  policyTypes:
+  - Egress
+status: {}
+```
