--- a/CKA/7.storage.md
+++ b/CKA/7.storage.md
@@ -150,3 +150,45 @@ spec:
       persistentVolumeClaim:
         claimName: myclaim
 ```
+## Storage classes
+- used to dynamically provision storage 
+```yaml
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: google-storage
+provisioner: kubernetes.io/gce-pd
+```
+```yaml
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: standard
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+
+```
+- with storageclass, no longer need PV definition as it is dynamically provisioned
+- specify storage class name in the PVC definition
+```yaml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: myclaim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+      storage: 500Mi
+```
+- can use different storage class names to provision different storage types
+- bronze for standard
+- silver for gp2
+- gold for io1
+### no-provisioner
+- kubernetes.io/no-provisioner does not support dynamic provisioning
