started networking section

--- a/CKA/8.networking.md
+++ b/CKA/8.networking.md
@@ -103,8 +103,138 @@ ip -n red link set veth-red up
 ip -n blue link set veth-blue up
 # add ip to vswitch
 ip addr add 192.168.15.5/24 dev v-net0
+```
+## Docker Networking
+```bash
+# not attached to any network
+docker run --network=none nginx
+# using host ports without port mapping
+docker run --network=host nginx
+# for host <-> container communication
+docker run --network=bridge nginx
+```
+- default network is bridge network which is `172.17.0.0/16`
+- each time a container is created,
+    - veth is created and attached to the bridge
+    - eth is created inside the container
+    - each pair have same ending characters
+        - eth0@if10 
+        - vethxxxxif10
+- when port mapping is done
+    - docker sets up iptables rules to forward traffic from host port to container port
+    - rules can be seen via 
+```bash
+# view iptable rules
+iptables -nvL -t nat
+```
+## CNI Pre-req
+- stands for Container Network Interface which is a standard
+- uses `bridge` plugin
+- supported plugins
+-- bridge
+-- vlan
+-- ipvlan
+-- macvlan
+-- windows
+### docker
+- does not support CNI
+- uses CNM (container network model)
+- how k8s does it 
+```bash
+# creates the container
+docker run --network=none nginx
+# runs bridge plugin
+bridge add <container-id> <veth-id>
+```
+### cluster networking
+1. master node - allow
+- 6443 for api server
+- 10251 for kube-scheduler
+- 10252 for kube-controller-manager
+- 2379 for etcd server
+- 2380 for etcd clients 
+2. workner nodes - allow
+- 10250 for kubelet
+- 30000-32767 for nodeports
+
+## Pod Networking
+- no built in solution for pod networking
+### networking model
+1. every pod should have an IP
+2. every pod should be able to communicate with every pod in SAME node
+3. every pod should be able to communicate with every pod in OTHER node without NAT
+### pod networking the hard way
+1. create bridge network on each node
+2. different subnet for each node's bridge interface
+3. create veth pair for each pod
+4. attach veth pair to bridge
+5. assign ip to veth pair
+6. bring up interface
+7. point all hosts to a router
+8. set up routes in the router
+9. 
+
+## CNI in k8s
+- tells kubelet how to create network for each pod
+- to comply with CNI, it needs an ADD and DELETE section
+- can see which networking plugin is used via `kubelet.service`
+```bash
+# check via kubelet.service
+ps -aux |grep kubeclt
 
 
+ExecStart=...
+  --network-plugin=cni \
+  --cni-bin-dir=/opt/cni/bin \
+  --cni-conf-dir=/etc/cni/net.d \
+  ...
+```
+- `/opt/cni/bin`
+    - contains all executable plugins
+- `/opt/cni/net.d`
+    - contains all config files which will be executed by kubelet
+
+- single pod can be attached to multiple bridge networks
+### weave works CNI
+- can deploy as a daemonset which ensure one pod per node
+
+## ipam weave
+- k8s doesn't care how we manage the IPs
+- as long as it done without clash
+- 2 plugins
+- there is an `ipam` plugin which is responsible for assigning IP addresses to containers
+### weave works example
+- by default allocates 10.32.0.0/12
 
 
+## service networking
+- types of services
+1. clusterIP
+- within cluster
+2. nodePort
+- works just like clusterIP with addition of
+- exposes application on a port on all nodes in cluster
+- allows external traffic to be routed to the application
+3. loadBalancer
+4/ externalName
+- service is cluster wide object
+- service is a virtual object
+- when a service is created, it is accessible from all nodes
+- `kube-proxy` watches changes in cluster through `kube-api server` 
+- when a new service is created, `kube-proxy` 
+### when a service is created
+1. gets an IP from predefined range
+2. creates a virtual IP
+3. kube-proxy creates iptable rules to forward traffic to the service to IP and port
+#### kube-proxy modes
+1. iptables [default]
+- all rules created by this have comments
+```bash
+iptables -L -t nat |grep <service_name> 
+```
+2. userspace
+3. ipvs
+- check which proxy mode it uses via logs
+```bash
+cat /var/log/kube-proxy.log 
 ```
