--- a/CKA/8.networking.md
+++ b/CKA/8.networking.md
@@ -238,3 +238,39 @@ iptables -L -t nat |grep <service_name>
 ```bash
 cat /var/log/kube-proxy.log 
 ```
+
+## DNS
+- built in DNS server is deployed by default
+- a serviec called `web-service` is deployed in `apps` namespace
+- the type is service `svc` 
+- fqdn becomes `web-service.apps.svc.cluster.local`
+- records or pods are not creaeted by default
+- pod name is converted from ip to a dashed syntax
+- for pods, it becomes `10-244-2-5.apps.pod.cluster.local`
+- 
+## DNS in the cluster
+- < 1.12 version, `kube-dns` is used
+- => 1.12 version, `coredns` is used
+- coreDNS executable pod is deployed as a deployment
+- uses `/etc/coredns/Corefile` which is passed to pod as a `configMap` object
+- `coredns` is a plugin based DNS server 
+- `kube-dns` IP address is used as DNS server for all pods
+## hard way to expose services
+- service node ports can only be allocated to high ports (e.g. 30000-32767)
+- type `loadBalancer` can be used on cloud platforms 
+## Ingress
+- layer 7 load balancer
+- still need to publish as node port and tie to cloud load balancer
+### Ingress controllers
+- Google Cloud E  nginx, haproxy, traefik, istio etc
+- default does not come with any ingress controller
+#### nginx ingress controller
+- requires
+1. configMap for nginx configuration
+2. serviceAccount for nginx-ingress-serviceAccount used for auth
+3. deployment for nginx-ingress-controller
+4. 
+### Ingress resources
+- rules to route traffic to services
+- path based routing
+- can have multiple paths per host 
